--- a/extension/content.css
+++ b/extension/content.css
@@ -1,25 +1,12 @@
 body {
-   --ShinigamiEyesTFriendly: #77B91E;
-   --ShinigamiEyesTransphobic: #991515;
+   --JeffreyAssociatesColor: #C8860A;
 }
 
-.shinigami-eyes-theme-green-red-max {
-   --ShinigamiEyesTFriendly: #00FF00;
-   --ShinigamiEyesTransphobic: #FF0000;
+.jeffrey-associates-theme-amber-max {
+   --JeffreyAssociatesColor: #FFB300;
 }
 
-.shinigami-eyes-theme-purple-yellow {
-   --ShinigamiEyesTFriendly: rgb(153, 0, 255);
-   --ShinigamiEyesTransphobic: rgb(179, 152, 0);
-}
-
-.shinigami-eyes-theme-cyan-orange {
-   --ShinigamiEyesTFriendly: rgb(98, 161, 197);
-   --ShinigamiEyesTransphobic: #FB6A4A;
-}
-
-.assigned-label-transphobic, a.assigned-label-transphobic { color: var(--ShinigamiEyesTransphobic) !important; }
-.assigned-label-t-friendly, a.assigned-label-t-friendly { color: var(--ShinigamiEyesTFriendly) !important; }
+.assigned-label-associate, a.assigned-label-associate { color: var(--JeffreyAssociatesColor) !important; }
 
 .has-assigned-label * { color: inherit !important; }
 .shinigami-eyes-debug-snippet-highlight {
